--- a/src/Container/Work/Work.scss
+++ b/src/Container/Work/Work.scss
@@ -210,3 +210,11 @@
     box-shadow: 0 0 25px rgba(0,0,0,0.2);
     }
 }
+.work-links{
+    width: 50%;
+    margin-top: 1rem;
+    display: flex;
+    justify-content: space-between;
+   
+
+}
