--- a/src/Container/About/About.scss
+++ b/src/Container/About/About.scss
@@ -8,30 +8,72 @@
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    flex-wrap: wrap;
-    margin-top:2rem
+    // flex-wrap: wrap;
+    margin-top:2rem;
+    // @media screen and (min-width:1024px) {
+    //     display: flex;
+    //     flex-direction: column;
+    //     border:1px solid silver
+    // }
 }
 
 .app__profile-item{
-    width:190px;
+    width:100%;
      display: flex;
-     justify-content: flex-start;
-     align-items: flex-start;
-     flex-direction: column;
+     justify-content: center;
+     align-items: center;
      margin:2rem;
-
-     img{
-        width:100%;
-        height: 170px;
-        border-radius: 15px;
-        object-fit: cover;
+     padding: 1rem;
+    //  border:1px solid silver;
+     .app__profile-description{
+        width: 65%;
+        padding: 2rem;
+        // border: 1px solid  black;
+        p{
+            font-size: 1.5rem;
+            font-family: 'Times New Roman', Times, serif;
+        }
      }
-     @media screen and (min-width:2000px) {
-        width:370px;
-        margin:2rem 4rem;
-
-    img{
-        height: 320px;
-     }   
+     .app__profile-subitem{
+        display: flex;
+        flex-direction: column;
+        width: 35%;
+        // border:1px solid yellow;
+         img{
+            width:100%;
+            height: auto;
+            border-radius: 15px;
+            object-fit: cover;
+        box-shadow: 0 0 20px rgba(255, 255, 255, 0.8);
+            
+         }
+         @media screen and (min-width:2000px) {
+            width:370px;
+            margin:2rem 4rem;
+    
+        img{
+            height: 30%;
+         }   
+         }
+         @media screen and (max-width:1024px) {
+            width:100%;
+            margin:2rem 4rem;
+    
+        img{
+            width: 100%;
+         }   
+         }
+     }
+     @media screen and (max-width:1024px) {
+        flex-direction: column;
+        .app__profile-description{
+            width: 100%;
+            padding: 1rem;
+            // border: 1px solid  black;
+            p{
+                font-size: 1rem;
+                font-family: 'Times New Roman', Times, serif;
+            }
+         }
      }
 }
