--- a/src/Container/Skills/Skills.scss
+++ b/src/Container/Skills/Skills.scss
@@ -43,9 +43,9 @@
     div{
         width: 90px;
         height: 90px;
-        border-radius: 50%;
+        // border-radius: 50%;
         background-color: #fff;
-
+        clip-path: polygon(21% 0, 85% 0, 100% 0, 100% 83%, 83% 100%, 30% 100%, 0 100%, 0 17%);
         img{
             width:50%;
             height: 50%;
