--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -142,7 +142,7 @@
                     text-transform: uppercase;
                     font-weight: 500;
                     transition: all 0.3s ease-in-out;
-                    font-family: 'Nebula', sans-serif;
+                    font-family: nebula;
                     &:hover{
                         color:#d8323c   ;
                     }
