done with text stacks

--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -20,10 +20,10 @@
    
     p{
         font-size: 1.5rem;
-        font-family: 'Nebula', sans-serif;    
+        font-family:'Kalam', cursive;
         color:white;
         @media screen and (max-width:1024px) {
-            font-family: 'Nebula', sans-serif;
+            font-family:'Kalam', cursive;
             
         }
     }
@@ -57,7 +57,7 @@
             text-transform: uppercase;
             font-weight: 500;
             transition: all 0.3s ease-in-out;
-            font-family: 'Nebula', sans-serif;
+            font-family: 'Kalam', cursive;
             font-size: 1rem;
 
             &:hover{
@@ -142,7 +142,7 @@
                     text-transform: uppercase;
                     font-weight: 500;
                     transition: all 0.3s ease-in-out;
-                    font-family: nebula;
+                    font-family:'Kalam', cursive;
                     &:hover{
                         color:#d8323c   ;
                     }
