--- a/src/Container/Work/Work.scss
+++ b/src/Container/Work/Work.scss
@@ -142,6 +142,32 @@
     width:100%;
     position: relative;
     flex-direction: column;
+    .work__title-text{
+        font-family: 'Kalam', cursive ;
+        color:#0c0e0c;
+        font-size: 1.25rem;
+
+        &:hover{
+            color:#eaebea;
+        }
+    }
+
+    .work__text-stack{
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+        justify-content: space-evenly;
+        padding: 0 .5rem 1rem .5rem;
+        .work__text-stack_single{
+            border:1px solid black;
+            background-color: #d8323c;
+            color: #0c0e0c;
+            padding: .25rem .5rem ; 
+            border-radius: 10px;
+            font-family:'Kalam', cursive ;
+            margin-top: 1rem;
+        }
+    }
     
     .icon__div{
         margin-top:1rem;
@@ -252,3 +278,4 @@
     color:black;
     border:1px solid black
 }
+
