--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
 
-@import url("https://fonts.cdnfonts.com/css/nebula");
+/* @import url("https://fonts.cdnfonts.com/css/nebula"); */
+@import url('https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&family=Orbitron:wght@400;500;600;700;800;900&family=Prosto+One&family=Rubik+80s+Fade&family=Sofia&display=swap');
 
 :root {
   --font-base: "DM Sans", sans-serif;
