--- a/src/Container/About/About.scss
+++ b/src/Container/About/About.scss
@@ -32,6 +32,7 @@
         p{
             font-size: 1.5rem;
             font-family: 'Times New Roman', Times, serif;
+            text-align: justify;
         }
      }
      .app__profile-subitem{
