--- a/src/Container/Header/Header.scss
+++ b/src/Container/Header/Header.scss
@@ -187,7 +187,7 @@
         display: none;
 
         div{
-            margin:1rem
+            margin:1rem;
         }
         
     }
@@ -195,7 +195,7 @@
 
  .app__header-img{
     flex:1;
-    width:50%;
+    width:58%;
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
@@ -204,7 +204,7 @@
     // border:2px solid yellow;
 
     img{
-        width: 100%;;
+        width: 98%;;
         margin: auto;
         border-radius: 50%;
         object-fit: contain;
