--- a/src/Container/Work/Work.scss
+++ b/src/Container/Work/Work.scss
@@ -7,7 +7,7 @@
 .app__work-filter{
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     flex-wrap: wrap;
     margin: 3rem auto;
@@ -69,8 +69,8 @@
         transition: all 0.3s ease;
 
         &:hover{
-            box-shadow: 0 0 25px rgba(255, 255, 255, 0.8);
-            background-image: linear-gradient(to right, #eaebea,#d8323c);
+            box-shadow: 0 0 15px rgba(255, 255, 255, 0.8);
+            background-image: linear-gradient(135deg,#d8323c, #eaebea,#d8323c);
         }
    
         
@@ -144,9 +144,6 @@
         color:#0c0e0c;
         font-size: 1.25rem;
 
-        &:hover{
-            color:#eaebea;
-        }
     }
 
     .work__text-stack{
@@ -162,7 +159,7 @@
             padding: .25rem .5rem ; 
             border-radius: 10px;
             font-family:'Kalam', cursive ;
-            margin-top: 1rem;
+            margin-top: 1.5rem;
         }
     }
     
@@ -208,7 +205,7 @@
     width: 100%;
     &:hover{
         box-shadow: 0 0 25px rgba(245, 244, 244, 0.8);
-    background-image:linear-gradient(to right,#eaebea,#d8323c)
+        background-image: linear-gradient(135deg,#d8323c, #eaebea,#d8323c);
 
     }
 
@@ -240,11 +237,10 @@
     
     &:hover{
         box-shadow: 0 0 25px rgba(255, 255, 255, 0.8);
-    background-image:linear-gradient(to right,#eaebea,#d8323c)
-        }
+        background-image: linear-gradient(135deg,#d8323c, #eaebea,#d8323c);
+    }
     @media screen and (max-width:768px) {
         width: 100%;
-        // margin-top: 1rem;
         div{
             width: 100%;
         }
@@ -256,6 +252,8 @@
     width: 100%;
     padding: 1rem;
     align-items: center;
+    margin: auto;
+    justify-content: center;
     justify-content: space-evenly;
     margin-right: 1rem;
     div{
@@ -275,7 +273,7 @@
         }
         &:hover{
             box-shadow: 0 0 25px rgba(255, 255, 255, 0.8);
-            background-image:linear-gradient(to right,#eaebea,#d8323c)
+            background-image: linear-gradient(135deg,#d8323c, #eaebea,#d8323c);
         
             }
     }
@@ -291,6 +289,8 @@
         padding:1rem;
         margin-top: 3rem;
         margin: auto;
+        align-items: center;
+        justify-content: center;
         flex-direction: column;
     }
 }
