--- a/src/App.scss
+++ b/src/App.scss
@@ -1,16 +1,21 @@
+
 .app {
     background-color: var(--primary-color);
     font-family: var(--font-base);
+
   }
 
   .app__whitebg {
     // background-color: var(--white-color);
     background-color: #0c0e0c;
+    background: linear-gradient(109.6deg, rgba(0, 0, 0, 0.93) 11.2%, rgb(63, 61, 61) 78.9%);
+
   }
   
   .app__primarybg {
     background-color: #0c0e0c;
-    // background-color: var(--primary-color);
+    background: linear-gradient(109.6deg, rgba(0, 0, 0, 0.93) 11.2%, rgb(63, 61, 61) 78.9%);
+ 
   }
   
   .app__container {
