--- a/src/Container/About/About.scss
+++ b/src/Container/About/About.scss
@@ -2,14 +2,14 @@
     flex:1;
     width: 100%;
     flex-direction: column;
+    
 }
 
 .app__profiles{
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    // flex-wrap: wrap;
-    margin-top:2rem;
+
     // @media screen and (min-width:1024px) {
     //     display: flex;
     //     flex-direction: column;
@@ -22,7 +22,7 @@
      display: flex;
      justify-content: center;
      align-items: center;
-     margin:2rem;
+    //  margin:2rem;
      padding: 1rem;
     //  border:1px solid silver;
      .app__profile-description{
