--- a/src/Container/Work/Work.scss
+++ b/src/Container/Work/Work.scss
@@ -2,6 +2,7 @@
     flex: 1;
     width: 100%;
     flex-direction: column;
+   
 }
 
 .app__work-filter{
@@ -31,13 +32,11 @@
             border-radius: 0.85rem;   
         }
     }
-    .app__work-filter-item::before{
-        content: '';
-    position: absolute;
-    top: 0; left: 0;
-    border-top: 10px solid black;
-    border-right: 10px solid white;
-    width: 0;
+    .app__work-filter-item{
+        background-color: #eaebea;
+        color:#0c0e0c;
+        clip-path: polygon(12% 0, 88% 0, 100% 12%, 100% 88%, 88% 100%, 12% 100%, 0 88%, 0 12%);
+
     }
 
 
@@ -231,7 +230,7 @@
         width: 90%;
         margin: auto;
         img{
-                width: 100%;
+             width: 100%;
         }
     }
     
