--- a/src/Container/About/About.scss
+++ b/src/Container/About/About.scss
@@ -28,11 +28,40 @@
      .app__profile-description{
         width: 65%;
         padding: 2rem;
-        // border: 1px solid  black;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        // border: 1px solid silver;
         p{
             font-size: 1.5rem;
-            font-family: 'Times New Roman', Times, serif;
+            font-family:'Times New Roman', Times, serif;
             text-align: justify;
+        }
+        a{
+            text-decoration: none;
+            // border: 1px solid black;
+            padding:8px 14px;
+            color: #eaebea;
+            background-color: black;
+            border-radius: 12px;
+            font-size: 1.2rem;
+            font-family: 'Kalam', cursive;
+            margin-top: 1rem;
+            &:hover{
+                box-shadow: 0 0 25px rgba(245, 244, 244, 0.8);
+                background-image: linear-gradient(135deg,#d8323c, #eaebea,#d8323c);
+                color:#0e0c0e;
+            }
+
+            @media screen and (max-width:768px) {
+                border: 1px solid black;
+                padding:8px 14px;
+                color: #eaebea;
+                background-color: black;
+                border-radius: 12px;
+                font-size: .8rem;
+                font-family: 'Kalam', cursive;
+            }
         }
      }
      .app__profile-subitem{
