--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -17,9 +17,10 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-   
-    p{
+    transition: all 3s ease-in;
+    span{
         font-size: 1.5rem;
+        text-align: left;
         font-family:'Kalam', cursive;
         color:white;
         @media screen and (max-width:1024px) {
@@ -28,6 +29,47 @@
         }
     }
 }
+
+.app__navbar-logo span {
+    display: inline-block;
+    animation: wave-text 2s ease-in-out infinite;
+  }
+  
+  .app__navbar-logo {
+    span:nth-of-type(1){ animation-delay: 0.0s; }
+    span:nth-of-type(2){ animation-delay: 0.1s; }
+    span:nth-of-type(3){ animation-delay: 0.2s; }
+    span:nth-of-type(4){ animation-delay: 0.3s; }
+    span:nth-of-type(5){ animation-delay: 0.4s; }
+    span:nth-of-type(6){ animation-delay: 0.5s; }
+    span:nth-of-type(7){ animation-delay: 0.6s; }
+    span:nth-of-type(8){ animation-delay: 0.7s; }
+    span:nth-of-type(9){ animation-delay: 0.8s; }
+    span:nth-of-type(10){ animation-delay: 0.9s; }
+    span:nth-of-type(11){ animation-delay: 1s; }
+    span:nth-of-type(12){ animation-delay: 1.1s; }
+    span:nth-of-type(13){ animation-delay: 1.2s; }
+
+  }
+  
+  @keyframes wave-text{
+    00%{
+      transform: translateX(0em);
+    }
+    // 25%{
+    //   transform: translateY(-0.3em);
+    // }
+    50%{
+      transform: translateX(0.3em);
+    }
+    // 75%{
+    //     transform:scale(0,2);
+    //   }
+    100%{
+      transform: translateX(0em);
+    }
+  }
+  
 
 .app__navbar-links{
     flex :1;
