--- a/src/Container/Header/Header.scss
+++ b/src/Container/Header/Header.scss
@@ -7,11 +7,16 @@
 }
 
 .app__header{
-    flex:1;
+    // flex:1;
+    display: flex;
     width: 100%;
     height: 100%;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    justify-content: space-around;
     padding: 6rem 2rem 0;
+    // border:2px solid silver;
 
     @media screen and (min-width:2000px) {
         padding-top: 8rem;
@@ -26,13 +31,14 @@
 }
 
 .app__header-info{
-    flex:0.65;
+    flex:2;
     display: flex;
+    width: 100%;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: flex-start;
-    height: 100%;
-
+    height: 50%;
+    // border:2px solid red;
     @media screen and (max-width:2000px) {
         width:100%;
         margin-right: 0rem;;    
@@ -50,37 +56,51 @@
 .app__header-badge{
     width:100%;
     display:flex;
-    justify-content: flex-end;
-    align-items: flex-end;
+    justify-content: flex-start;
+    align-items: flex-start;
     flex-direction: column;
-    padding-top: 3rem;
-    
-    .badge-cmp, .tag-cmp{
-        padding: 1rem 2rem;
-        border:var(--white-color);
+    // border:2px solid green;
 
+    // padding-top: 3rem;
+    .typewriter{
+        font-size: 2rem;
+        color: #eaebea;
+        font-family: 'Kalam',cursive;
+        text-align: center;
+        margin-top: 1rem;
+        @media screen and (max-width:768px) {
+            font-size: 1.3rem;
+        }
+    }
+    .badge-cmp, .tag-cmp{
+        padding: 1rem 1rem 0 1rem;
+        border:1px solid red;
+        border:var(--white-color);
+        height: fit-content;
         border-radius: 15px;
         flex-direction: row;
-        width: 36vw;
+        width: 80%;
         box-shadow: 0 0 20px rgba(255, 255, 255, 0.8);
-        border:1px solid black;
+        // border:1px solid black;
         div{
             p{
             color: #eaebea;
+            font-family: 'Kalam',cursive;
             }
             h1{
         color:#d8323c;
+        font-family: 'Kalam',cursive;
 
             }
         }
 
         @media screen and (max-width:1024px) {
-            width:90%;
+            width:100%;
             margin:auto;
-            
-            p{
-        text-align: center;
-            }
+            padding: 1rem auto;
+        //     p{
+        // text-align: center;
+        //     }
         }
     }
     .badge-cmp{
@@ -101,7 +121,7 @@
         }
     }
 
-    span{
+    .span{
         font-size:2.5rem;
         @media screen and (min-width:2000px) {
             font-size: 5rem;
@@ -109,113 +129,60 @@
     }
 
     @media screen and (max-width:1024px) {
-        
+        margin-bottom: 1rem;
         justify-content: flex-start;
         align-items: flex-start;
     }
 }
 
- .app__header-circles{
-    flex:0.75;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: flex-start;
-    height: 100%;
-    
-    div{
-        width:70px;
-        height: 70px;
-        border-radius: 50%;
-        background:var(--white-color );
-        box-shadow: 0 0 20px rgba(255, 255, 255, 0.8);
-        border:2px solid yellow;
-
-        // box-shadow: 0 0 20px rgba(0,0,0,0.1);
-
-        img{
-            width:50%;
-            height: 50%;
-        }
-    }
-    div:nth-child(1){
-        width: 100px;
-        height: 100px;
-        margin-left: 1rem;
-    }
-    
-    div:nth-child(2){
-        margin:2.75rem;
-        width: 150px;
-        height: 150px;
-    }
-    
-    div:nth-child(3){
-        width: 100px;
-        height: 100px;
-        margin-left:1rem
-    }
-    @media screen and (min-width:2000px) {
-        
-    div:nth-child(1){
-        width: 400px;
-        height: 400px;
-    }
-    
-    div:nth-child(2){
-        width: 170px;
-        height: 170px;
-    }
-    
-    div:nth-child(3){
-        width: 200px;
-        height: 200px;
-    }
-         
-    }
-
-    @media screen and (max-width:1024px) {
-        // width:100%;
-        // flex-direction: row;
-        // flex-wrap: wrap;
-        // margin-left: 0;
-        display: none;
-
-        div{
-            margin:1rem;
-        }
-        
-    }
+ 
+  .animate{
+    overflow: hidden;
+    border-radius: 42% 56% 72% 28% /42% 42% 56% 48%; 
+    border-radius: 50%;
+    animation: motion 3.75s linear infinite;
  }
 
- .app__header-img{
+
+ .app__header2-img{
     flex:1;
-    width:58%;
+    width: 100%;
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
     position: relative; 
     margin-left: 3rem;
-    // border:2px solid yellow;
+    // border:2px solid blue;
+
+    
 
     img{
-        width: 98%;;
+        width: 100%;
         margin: auto;
         border-radius: 50%;
         object-fit: contain;
         z-index: 1;
-    }
+    overflow: hidden;
+    border-radius: 42% 56% 72% 28% /42% 42% 56% 48%; 
+    border-radius: 50%;
+    animation: motion 3.75s linear infinite;
 
-    .overlay_circle{
-        position: absolute;
-        left:0;
-        right:0;
-        margin: auto;
-        z-index: 0;
-        width: 100%;
-        height: 100%;
     }
     @media screen and (max-width:1024px) {
-        margin: 2rem 0  ;
+        width: 60%;
+        margin: 1rem auto;
     }
  }
+   
+@keyframes motion {
+    0%,
+    100% {
+      border-radius: 42% 56% 72% 28% /42% 42% 56% 48%;
+    }
+    33% {
+      border-radius: 72% 28% 48% 48% /28% 28% 72% 72%;
+    }
+    66% {
+      border-radius: 100% 56% 56% 56% /100% 100% 42% 42%;
+    }
+  }
