--- a/src/Container/Header/Header.scss
+++ b/src/Container/Header/Header.scss
@@ -170,7 +170,7 @@
     }
     @media screen and (max-width:1024px) {
         width: 60%;
-        margin:1rem auto 2rem auto;
+        margin:2rem auto;
     }
  }
    
