--- a/src/Container/Header/Header.scss
+++ b/src/Container/Header/Header.scss
@@ -15,7 +15,7 @@
     justify-content: center;
     align-items: center;
     justify-content: space-around;
-    padding: 6rem 2rem 0;
+    // padding: 6rem 2rem 0;
     // border:2px solid silver;
 
     @media screen and (min-width:2000px) {
@@ -170,7 +170,7 @@
     }
     @media screen and (max-width:1024px) {
         width: 60%;
-        margin:2rem auto;
+        margin: 1rem auto;
     }
  }
    
