--- a/src/Container/Header/Header.scss
+++ b/src/Container/Header/Header.scss
@@ -15,7 +15,8 @@
     justify-content: center;
     align-items: center;
     justify-content: space-around;
-    // padding: 6rem 2rem 0;
+    padding: 6rem 2rem 0;
+    // padding:4rem;
     // border:2px solid silver;
 
     @media screen and (min-width:2000px) {
@@ -24,10 +25,9 @@
     }
     @media screen and (max-width:1024px) {
         flex-direction: column-reverse;
+        // padding: 2rem 1rem 0;
     }
-    @media screen and (max-width:450px) {
-        padding:6rem 1rem 2rem;
-    }
+  
 }
 
 .app__header-info{
