--- a/src/Container/Header/Header.scss
+++ b/src/Container/Header/Header.scss
@@ -26,7 +26,7 @@
     @media screen and (max-width:1024px) {
         flex-direction: column-reverse;
         padding: 2rem 1rem 0;
-        margin-top: 3rem;
+        // margin-top: 3rem;
     }
   
 }
@@ -133,7 +133,8 @@
     }
 
     @media screen and (max-width:1024px) {
-        margin-bottom: 1rem;
+        margin-top: 3rem;
+        border: 1px solid silver;
         justify-content: flex-start;
         align-items: flex-start;
     }
@@ -174,7 +175,8 @@
     }
     @media screen and (max-width:1024px) {
         width: 60%;
-        margin: 1rem auto;
+        margin: 4rem auto 2rem auto;
+        // border:1px solid red;
     }
  }
    
