--- a/src/Container/About/About.scss
+++ b/src/Container/About/About.scss
@@ -55,6 +55,7 @@
                 background-color: black;
                 border-radius: 12px;
                 font-size: .8rem;
+                margin: auto;
                 font-family: 'Kalam', cursive;
             }
         }
