--- a/src/Container/Header/Header.scss
+++ b/src/Container/Header/Header.scss
@@ -178,7 +178,7 @@
     }
     @media screen and (max-width:1024px) {
         width: 60%;
-        margin: 5rem auto 1rem auto;
+        margin: 5rem auto 0 auto;
         // border:1px solid red;
     }
  }
