--- a/src/Container/Header/Header.scss
+++ b/src/Container/Header/Header.scss
@@ -137,7 +137,7 @@
     }
 
     @media screen and (max-width:1024px) {
-        // margin-top: 1rem;
+        margin-bottom: 1rem;
         justify-content: flex-start;
         align-items: flex-start;
     }
