--- a/src/Container/About/About.scss
+++ b/src/Container/About/About.scss
@@ -98,7 +98,7 @@
             // border: 1px solid  black;
             p{
                 font-size: 1rem;
-                font-family: 'Times New Roman', Times, serif;
+                font-family: 'Kalam', cursive;
             }
          }
      }
