--- a/src/Container/Work/Work.scss
+++ b/src/Container/Work/Work.scss
@@ -196,16 +196,15 @@
 .app__work-Github-Calender{
     border-radius: 25px;    
     background-color: #0c0e0c;
-   
     padding: 2rem;
     margin:3rem auto;
     color:#eaebea;
-    transition: all 0.3s ease;
     width: 100%;
-    &:hover{
-        box-shadow: 0 0 25px rgba(245, 244, 244, 0.8);
-        background-image: linear-gradient(135deg,#d8323c, #eaebea,#d8323c);
 
+    transition: all .8s ease;
+    &:hover{
+    box-shadow: 0 0 25px rgba(245, 244, 244, 0.8);
+        // background-image: linear-gradient(135deg,#d8323c, #eaebea,#d8323c);
     }
 
     @media screen and (max-width:768px) {
@@ -213,24 +212,25 @@
         margin:1rem auto;
     }
 }
-.app__work-calender{
-    margin: auto;
-    width:100%;
-}
+// .app__work-calender{
+//     margin: auto;
+//         width:100%;
+// }
 
 .app__work-git-stats1{
     margin-top: 3rem auto;
     display: flex;
     justify-content: center;
-    width: 60% ;
+    width: fit-content ;
+    transition: all .8s ease;
     padding: 1rem;
-    // margin: 3rem auto ;
-    transition: all 0.3s ease-in-out;
     div{
-        width: 90%;
+        width: 100%;
         margin: auto;
+
         img{
              width: 100%;
+             margin: auto;
         }
     }
     
@@ -256,15 +256,17 @@
     justify-content: space-evenly;
     margin-right: 1rem;
     div{
-        width: 35%;
+        width: fit-content;
         margin: auto 1rem;
         margin-top: 0px;
         padding: 1rem;
         display: flex;
         justify-content: space-evenly;
         align-items: center;
+        transition: all .8s ease;
         img{
-            width: 90%;
+            width: 100%;
+
         }
         @media screen and (max-width:768px) {
             width: 100%;
@@ -277,7 +279,11 @@
             }
     }
     div:nth-child(2){
-        width: 50%;
+        width: fit-content;
+        img{
+            width: 100%;
+            margin: auto;
+        }
         @media screen and (max-width:768px) {
             width: 100%;
             margin: auto;
