--- a/src/Container/Skills/Skills.scss
+++ b/src/Container/Skills/Skills.scss
@@ -56,11 +56,11 @@
             // box-shadow: 0 0 25px #fef4f5;
             box-shadow: 2px 0 15px rgba(255, 255, 255, 0.8);
 
-            img{
-                width: 65%;
-                height:65%
+            // img{
+            //     width: 60%;
+            //     height:60%
                 
-            }
+            // }
 
         }
         @media screen and (min-width:2000px) {
