--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,17 @@
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background-color: black; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #eaebea; 
+  border-radius: 10px;
+}
 
 .app {
     background-color: var(--primary-color);
