--- a/src/Container/Footer/Footer.scss
+++ b/src/Container/Footer/Footer.scss
@@ -4,22 +4,15 @@
     flex-direction: column;
 }
 
-.app__footer-cards{
-    width: 60%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-wrap: wrap;
-    margin: 4rem 2rem 2rem  ;
 
 .app__footer-card{
-    min-width: 290px;
+    width: 90%;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: center ;
     align-items: center;
 
-    margin:1rem 0;
+    margin:.5rem auto;
     padding: 1rem;
     border-radius: 10px;
     cursor: pointer;
@@ -52,65 +45,46 @@
     }
 
 }
-@media screen and (max-width:768px) {
-    width:100%;
-    
-}
-}
+
+
 
 .app__footer-cards .app__footer-card:last-child{
     background-color: var(--white-color);
 
 }
 
-.app__footer-form{
-    width: 60%;
+form{
+    display: flex;
     flex-direction: column;
-    margin: 1rem 2rem;
-
-    div{
+    input,textarea{
         width: 100%;
-        margin:0.75rem 0;
-        border-radius: 10px;
-        cursor: pointer;
-        background-color: var(--primary-color);
-        transition: all 0.3s ease-in-out;
-
-        input, textarea{
-            width: 100%;
-            padding: 0.95rem;
-            border:none;
-            border-radius: 7px;
-            background-color: var(--white-color);
-            font-family: var(--font-base);
-            color: var(--secondary-color);
-            outline: none;
-        }
-
-        textarea{
-            height: 170px;
-        }
-
-        &:hover{
-            box-shadow: 0 0 8px var(--white-color);
-        }
-    }
-
-    button{
-        padding: 1rem 2rem;
-        border-radius: 10px;
         border:none;
-        background-color: var(--secondary-color);
-        font-weight: 500;
-        color: var(--white-color);
-        outline : none;
-        margin: 2rem 0 0 0;
+        border-radius: 7px;
+        background-color: var(--white-color);
         font-family: var(--font-base);
-        cursor: pointer;
-
+        color: var(--secondary-color);
+        outline: none;
+        margin-bottom: 1rem;
+        padding: .5rem;
     }
-    @media screen and (max-width:768px) {
-        width:100%;
-        margin: 1rem 0;
+
+    input[type="submit"]{
+        background-color: var(--secondary-color);
+        color:white;
+        width: 50%;
+        margin-inline:auto; 
+        margin-bottom: 0;
+        padding: 0;
+    }
+   
+    label{
+        color:white;
+        margin-top: .5rem;
     }
 }
+input{
+    height: 2.5rem;
+    padding: 1rem;
+}
+
+       
