--- a/src/Container/About/About.scss
+++ b/src/Container/About/About.scss
@@ -28,19 +28,24 @@
             font-family: 'Kalam', cursive;
             text-align: justify;
         }
-        a{
+        .button-5{
             text-decoration: none;
             padding:8px 14px;
             color: #eaebea;
             background-color: black;
-            border-radius: 12px;
             font-size: 1.2rem;
             font-family: 'Kalam', cursive;
             margin-top: 1rem;
+            border-radius: 10px;
+                color: black;
+    background-image: linear-gradient(135deg,#d8323c, #eaebea,#d8323c);
+    background-size: 500px;
+    background-repeat: no-repeat;
+    background-position: 0%;
+    transition: background 300ms ease-in-out;
             &:hover{
-                box-shadow: 0 0 25px rgba(245, 244, 244, 0.8);
-                background-image: linear-gradient(135deg,#d8323c, #eaebea,#d8323c);
-                color:#0e0c0e;
+                background-position: 100%;
+                    color: white;
             }
 
             @media screen and (max-width:768px) {
@@ -97,3 +102,19 @@
          }
      }
 }
+
+// .button-5 {
+//     color: #fff;
+//     border: 3px solid #c266d3;
+//     background-image: -webkit-linear-gradient(30deg, #c266d3 50%, transparent 50%);
+//     background-image: linear-gradient(30deg, #c266d3 50%, transparent 50%);
+//     background-size: 500px;
+//     background-repeat: no-repeat;
+//     background-position: 0%;
+//     -webkit-transition: background 300ms ease-in-out;
+//     transition: background 300ms ease-in-out;
+//   }
+//   .button-5:hover {
+//     background-position: 100%;
+//     color: #c266d3;
+//   }
