snake game added again

--- a/src/Container/Header/Header.scss
+++ b/src/Container/Header/Header.scss
@@ -1,184 +1,179 @@
-#home{
-    position: relative;
+#home {
+  position: relative;
 
-    .app__wrapper{
-        padding:0;
-    }
+  .app__wrapper {
+    padding: 0;
+  }
 }
 
-.app__header{
-    // flex:1;
-    display: flex;
+.app__header {
+  // flex:1;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-around;
+  padding: 6rem 4rem 0;
+
+  @media screen and (min-width: 2000px) {
+    padding-top: 8rem;
+  }
+  @media screen and (max-width: 1024px) {
+    flex-direction: column-reverse;
+    padding: 3rem 1rem 0;
+  }
+}
+
+.app__header-info {
+  flex: 2;
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  height: 50%;
+  @media screen and (max-width: 2000px) {
     width: 100%;
-    height: 100%;
-    flex-direction: row;
-    justify-content: center;
+    margin-right: 0rem;
+  }
+  @media screen and (max-width: 1024px) {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-around;
-    padding: 6rem 4rem 0 ;
-
-    @media screen and (min-width:2000px) {
-        padding-top: 8rem;
-
-    }
-    @media screen and (max-width:1024px) {
-        flex-direction: column-reverse;
-        padding: 3rem 1rem 0;
-    }
-  
+    justify-content: center;
+    margin-right: 0rem;
+  }
 }
 
-.app__header-info{
-    flex:2;
+.app__header-badge {
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: column;
+  .typewriter {
+    font-size: 2rem;
+    color: #eaebea;
+    font-family: "Kalam", cursive;
+    text-align: center;
+    margin-top: 1rem;
+    @media screen and (max-width: 768px) {
+      font-size: 1.3rem;
+    }
+  }
+  .badge-cmp,
+  .tag-cmp {
+    padding: 1rem 1rem 0 1rem;
+    border: 1px solid red;
+    border: var(--white-color);
+    height: fit-content;
+    border-radius: 15px;
     display: flex;
-    width: 100%;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    height: 50%;
-    @media screen and (max-width:2000px) {
-        width:100%;
-        margin-right: 0rem;;    
-    }
-    @media screen and (max-width:1024px) {
-        width:100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        margin-right: 0rem;;    
-    }
-}
-
-.app__header-badge{
-    width:100%;
-    display:flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    flex-direction: column;
-    .typewriter{
-        font-size: 2rem;
+    flex-direction: row;
+    width: 80%;
+    box-shadow: 0 0 20px rgba(255, 255, 255, 0.8);
+    div {
+      p {
         color: #eaebea;
-        font-family: 'Kalam',cursive;
-        text-align: center;
-        margin-top: 1rem;
-        @media screen and (max-width:768px) {
-            font-size: 1.3rem;
+        font-family: "Kalam", cursive;
+      }
+      h1 {
+        color: #d8323c;
+        font-family: "Kalam", cursive;
+        @media screen and (max-width: 1024px) {
+          font-size: 1.7rem;
         }
-    }
-    .badge-cmp, .tag-cmp{
-        padding: 1rem 1rem 0 1rem;
-        border:1px solid red;
-        border:var(--white-color);
-        height: fit-content;
-        border-radius: 15px;
-        display: flex;
-        flex-direction: row;
-        width: 80%;
-        box-shadow: 0 0 20px rgba(255, 255, 255, 0.8);
-        div{
-            p{
-            color: #eaebea;
-            font-family: 'Kalam',cursive;
-            }
-            h1{
-        color:#d8323c;
-        font-family: 'Kalam',cursive;
-                @media screen and (max-width:1024px) {
-                    font-size: 1.7rem;
-                }
-            }
-        }
-
-        @media screen and (max-width:1024px) {
-            width:100%;
-            margin:auto;
-            padding: 1rem auto;
-        }
-    }
-    .badge-cmp{
-        text-align: left;
-
-    }
-    .tag-cmp{
-        flex-direction: column;
-        margin-top: 3rem;
-
-        p,h2{
-            width: 100%;
-            text-transform: capitalize;
-            text-align: left;
-        }
-        h2{
-            font-size: 2rem;
-        }
+      }
     }
 
-    .span{
-        font-size:2.5rem;
-        padding-bottom: 12px;
-        @media screen and (min-width:2000px) {
-            font-size: 5rem;
-        }
-        @media screen and (max-width:1024px) {
-            font-size: 1.7rem;
-        }
+    @media screen and (max-width: 1024px) {
+      width: 100%;
+      margin: auto;
+      padding: 1rem auto;
     }
+  }
+  .badge-cmp {
+    text-align: left;
+  }
+  .tag-cmp {
+    flex-direction: column;
+    margin-top: 3rem;
 
-    @media screen and (max-width:1024px) {
-        margin-bottom: 1rem;
-        justify-content: flex-start;
-        align-items: flex-start;
+    p,
+    h2 {
+      width: 100%;
+      text-transform: capitalize;
+      text-align: left;
     }
+    h2 {
+      font-size: 2rem;
+    }
+  }
+
+  .span {
+    font-size: 2.5rem;
+    padding-bottom: 12px;
+    @media screen and (min-width: 2000px) {
+      font-size: 5rem;
+    }
+    @media screen and (max-width: 1024px) {
+      font-size: 1.7rem;
+    }
+  }
+
+  @media screen and (max-width: 1024px) {
+    margin-bottom: 1rem;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
 }
 
- 
-  .animate{
-    overflow: hidden;
-    border-radius: 42% 56% 72% 28% /42% 42% 56% 48%; 
-    border-radius: 50%;
-    animation: motion 3.75s linear infinite;
- }
+.animate {
+  overflow: hidden;
+  border-radius: 42% 56% 72% 28% /42% 42% 56% 48%;
+  border-radius: 50%;
+  animation: motion 3.75s linear infinite;
+}
 
+.app__header2-img {
+  flex: 1;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  position: relative;
+  margin-left: 3rem;
 
- .app__header2-img{
-    flex:1;
+  img {
     width: 100%;
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
-    position: relative; 
-    margin-left: 3rem;
-
-    
-
-    img{
-        width: 100%;
-        margin: auto;
-        border-radius: 50%;
-        object-fit: contain;
-        z-index: 1;
+    margin: auto;
+    border-radius: 50%;
+    object-fit: contain;
+    z-index: 1;
     overflow: hidden;
-    border-radius: 42% 56% 72% 28% /42% 42% 56% 48%; 
+    border-radius: 42% 56% 72% 28% /42% 42% 56% 48%;
     border-radius: 50%;
     animation: motion 3.75s linear infinite;
     animation-delay: 1s;
-    }
-    @media screen and (max-width:1024px) {
-        width: 60%;
-        margin: 5rem auto 0 auto;
-    }
- }
-   
-@keyframes motion {
-    0%,
-    100% {
-      border-radius: 42% 56% 72% 28% /42% 42% 56% 48%;
-    }
-    33% {
-      border-radius: 72% 28% 48% 48% /28% 28% 72% 72%;
-    }
-    66% {
-      border-radius: 100% 56% 56% 56% /100% 100% 42% 42%;
-    }
   }
+  @media screen and (max-width: 1024px) {
+    width: 60%;
+    margin: 5rem auto 0 auto;
+  }
+}
+
+@keyframes motion {
+  0%,
+  100% {
+    border-radius: 42% 56% 72% 28% /42% 42% 56% 48%;
+  }
+  33% {
+    border-radius: 72% 28% 48% 48% /28% 28% 72% 72%;
+  }
+  66% {
+    border-radius: 100% 56% 56% 56% /100% 100% 42% 42%;
+  }
+}
