--- a/src/Container/Footer/Footer.scss
+++ b/src/Container/Footer/Footer.scss
@@ -1,90 +1,83 @@
-.app__footer{
-    flex:1;
-    width:100%;
-    flex-direction: column;
+.app__footer {
+  flex: 1;
+  width: 100%;
+  flex-direction: column;
 }
 
+.app__footer-card {
+  width: 90%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 
-.app__footer-card{
-    width: 90%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center ;
-    align-items: center;
+  margin: 0.5rem auto;
+  padding: 1rem;
+  border-radius: 10px;
+  cursor: pointer;
+  background-color: #fef4f5;
 
-    margin:.5rem auto;
-    padding: 1rem;
-    border-radius: 10px;
-    cursor: pointer;
-    background-color: #fef4f5;
+  transition: all 0.3s ease-in-out;
 
-    transition: all 0.3s ease-in-out;
+  img {
+    width: 40px;
+    height: 40px;
+    margin: 0 0.7rem;
+  }
 
-    img{
-        width: 40px;
-        height: 40px;
-        margin: 0 0.7rem;
-    }
+  p {
+    font-weight: 600;
+  }
 
-    p{
-        font-weight: 600;
-    }
-    
-    a{
-        text-decoration: none;
-        font-weight: 5  00;
-    }
+  a {
+    text-decoration: none;
+    font-weight: 5 00;
+  }
 
-    &:hover{
-        box-shadow: 0 0 12px #fef4f5;
-    }
+  &:hover {
+    box-shadow: 0 0 12px #fef4f5;
+  }
 
-    @media screen and (max-width:450px) {
-        width:100%;
-
-    }
-
+  @media screen and (max-width: 450px) {
+    width: 100%;
+  }
 }
 
+.app__footer-cards .app__footer-card:last-child {
+  background-color: var(--white-color);
+}
 
-
-.app__footer-cards .app__footer-card:last-child{
+form {
+  display: flex;
+  flex-direction: column;
+  input,
+  textarea {
+    width: 100%;
+    border: none;
+    border-radius: 7px;
     background-color: var(--white-color);
+    font-family: var(--font-base);
+    color: var(--secondary-color);
+    outline: none;
+    margin-bottom: 1rem;
+    padding: 0.5rem;
+  }
 
+  input[type="submit"] {
+    background-color: var(--secondary-color);
+    color: white;
+    width: 50%;
+    margin-inline: auto;
+    margin-bottom: 0;
+    padding: 0;
+  }
+
+  label {
+    color: white;
+    margin-top: 0.5rem;
+  }
 }
-
-form{
-    display: flex;
-    flex-direction: column;
-    input,textarea{
-        width: 100%;
-        border:none;
-        border-radius: 7px;
-        background-color: var(--white-color);
-        font-family: var(--font-base);
-        color: var(--secondary-color);
-        outline: none;
-        margin-bottom: 1rem;
-        padding: .5rem;
-    }
-
-    input[type="submit"]{
-        background-color: var(--secondary-color);
-        color:white;
-        width: 50%;
-        margin-inline:auto; 
-        margin-bottom: 0;
-        padding: 0;
-    }
-   
-    label{
-        color:white;
-        margin-top: .5rem;
-    }
+input {
+  height: 2.5rem;
+  padding: 1rem;
 }
-input{
-    height: 2.5rem;
-    padding: 1rem;
-}
-
-       
