--- a/src/Container/Work/Work.scss
+++ b/src/Container/Work/Work.scss
@@ -1,324 +1,324 @@
-.app__work{
-    flex: 1;
-    width: 100%;
-    flex-direction: column;
-   
+.app__work {
+  flex: 1;
+  width: 100%;
+  flex-direction: column;
 }
 
-.app__work-filter{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    margin: 3rem auto;
-    .app__work-filter-item{
-        padding: 0.5rem 1rem;
-        position: relative;
-        background-color: #fff;
-        color:#000;
-        font-weight: 800;
-        cursor: pointer;
-        transition: all 0.3s ease;
-        margin:0.5rem;
-
-        &:hover{
-            background-color:var(--secondary-color);
-            color:#fff;
-        }
-
-        @media screen and (min-width:2000px) {
-            padding: 1rem 2rem;
-            border-radius: 0.85rem;   
-        }
-    }
-    .app__work-filter-item{
-        background-color: #eaebea;
-        color:#0c0e0c;
-        clip-path: polygon(12% 0, 88% 0, 100% 12%, 100% 88%, 88% 100%, 12% 100%, 0 88%, 0 12%);
-
-    }
-
-
-    .item-active{
-        background-color: var(--secondary-color);
-        color:#fff;
-
-    }
-}
-
-.app__work-portfolio{
-    display: flex;
-    width: 100%;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    .app__work-item{
-        width: 40%;
-        flex-direction: column;
-        margin-left: 2rem;
-        padding: 1rem;
-        border-radius: 0.5rem;
-        background-color: #eaebea;
-        color:#0c0e0c; 
-        cursor: pointer;
-    
-            color: #fff;
-            background-size: 1000px;
-            background-repeat: no-repeat;
-            background-position: 0%;
-            -webkit-transition: background 500ms ease-in;
-            transition: background 500ms ease-in;
-          
-          
-        &:hover{
-            box-shadow: 0 0 15px rgba(255, 255, 255, 0.8);
-            background-image: linear-gradient(135deg, #eaebea,#d8323c,#eaebea,#d8323c,);
-            // background-color: #d8323c;
-            background-position: 100%;
-        }
-   
-        
-        @media screen and (max-width:768px) {
-            width: 100%;
-            margin: 1rem;
-        }
-        @media screen and (min-width:769px) and (max-width:2000px){
-            width: 43%;
-            margin: 1rem;
-        }
-        
-    }
-}
-
-.app__work-img{
-    width: 100%;
-    height: auto;
+.app__work-filter {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 3rem auto;
+  .app__work-filter-item {
+    padding: 0.5rem 1rem;
     position: relative;
-    img{
-        width:100%;
-        border-radius: 0.5rem;
-        object-fit: cover;
+    background-color: #fff;
+    color: #000;
+    font-weight: 800;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    margin: 0.5rem;
+
+    &:hover {
+      background-color: var(--secondary-color);
+      color: #fff;
     }
 
-    @media screen and (min-width:2000px) {
-        height: 350px;
+    @media screen and (min-width: 2000px) {
+      padding: 1rem 2rem;
+      border-radius: 0.85rem;
     }
+  }
+  .app__work-filter-item {
+    background-color: #eaebea;
+    color: #0c0e0c;
+    clip-path: polygon(
+      12% 0,
+      88% 0,
+      100% 12%,
+      100% 88%,
+      88% 100%,
+      12% 100%,
+      0 88%,
+      0 12%
+    );
+  }
+
+  .item-active {
+    background-color: var(--secondary-color);
+    color: #fff;
+  }
 }
 
-.app__work-hover{
-    position: absolute;
-    top:0;
-    left:0;
-    bottom: 0;
-    right: 0;
-    width:100%;
-    height: 100%;
-    background-color: rgba(0,0,0,0.5);
+.app__work-portfolio {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  .app__work-item {
+    width: 40%;
+    flex-direction: column;
+    margin-left: 2rem;
+    padding: 1rem;
     border-radius: 0.5rem;
-    opacity: 0;
+    background-color: #eaebea;
+    color: #0c0e0c;
+    cursor: pointer;
+
+    color: #fff;
+    background-size: 1000px;
+    background-repeat: no-repeat;
+    background-position: 0%;
+    -webkit-transition: background 500ms ease-in;
+    transition: background 500ms ease-in;
+
+    &:hover {
+      box-shadow: 0 0 15px rgba(255, 255, 255, 0.8);
+      background-image: linear-gradient(
+        135deg,
+        #eaebea,
+        #d8323c,
+        #eaebea,
+        #d8323c
+      );
+      // background-color: #d8323c;
+      background-position: 100%;
+    }
+
+    @media screen and (max-width: 768px) {
+      width: 100%;
+      margin: 1rem;
+    }
+    @media screen and (min-width: 769px) and (max-width: 2000px) {
+      width: 43%;
+      margin: 1rem;
+    }
+  }
+}
+
+.app__work-img {
+  width: 100%;
+  height: auto;
+  position: relative;
+  img {
+    width: 100%;
+    border-radius: 0.5rem;
+    object-fit: cover;
+  }
+
+  @media screen and (min-width: 2000px) {
+    height: 350px;
+  }
+}
+
+.app__work-hover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 0.5rem;
+  opacity: 0;
+  transition: all 0.3s ease;
+
+  div {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    margin: 1rem;
+    font-family: var(--font-base);
+    font-weight: 800;
+    cursor: pointer;
     transition: all 0.3s ease;
 
-    div{
-        width:50px;
-        height: 50px;
-        border-radius: 50%;
-        background-color: rgba(0,0,0,0.5);
-        color:#fff;
-        margin: 1rem;
-        font-family: var(--font-base);
-        font-weight: 800;
-        cursor:pointer;
-        transition: all 0.3s ease;
-
-        svg{
-            width:50%;
-            height:50%;
-            color:var(--white-color); 
-        }
+    svg {
+      width: 50%;
+      height: 50%;
+      color: var(--white-color);
     }
+  }
 }
 
-.app__work-content{
-    padding:0.5rem;
-    width:100%;
-    position: relative;
-    flex-direction: column;
-    .work__title-text{
-        font-family: 'Kalam', cursive ;
-        color:#0c0e0c;
-        font-size: 1.25rem;
+.app__work-content {
+  padding: 0.5rem;
+  width: 100%;
+  position: relative;
+  flex-direction: column;
+  .work__title-text {
+    font-family: "Kalam", cursive;
+    color: #0c0e0c;
+    font-size: 1.25rem;
+  }
 
+  .work__text-stack {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: space-evenly;
+    padding: 0 0.5rem 1rem 0.5rem;
+    .work__text-stack_single {
+      border: 1px solid black;
+      background-color: #0c0e0c;
+      color: #eaebea;
+      padding: 0.25rem 0.5rem;
+      border-radius: 10px;
+      font-family: "Kalam", cursive;
+      margin-top: 1.5rem;
     }
+  }
+  .custom_buttons {
+    width: 50%;
+    height: 50%;
+    color: white;
+  }
 
-    .work__text-stack{
-        display: flex;
-        flex-wrap: wrap;
-        width: 100%;
-        justify-content: space-evenly;
-        padding: 0 .5rem 1rem .5rem;
-        .work__text-stack_single{
-            border:1px solid black;
-            background-color: #0c0e0c;
-            color: #eaebea;
-            padding: .25rem .5rem ; 
-            border-radius: 10px;
-            font-family:'Kalam', cursive ;
-            margin-top: 1.5rem;
-        }
+  .icon__div {
+    margin-top: 1rem;
+    display: flex;
+    width: 50%;
+    align-items: center;
+    justify-content: space-between;
+    div {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      background-color: rgba($color: #000000, $alpha: 0.9);
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
-    .custom_buttons{
-        width: 50%;
-        height: 50%;
-        color:white;
+    a:visited,
+    :active {
+      color: black;
     }
-    
-    
-    .icon__div{
-        margin-top:1rem;
-        display: flex;
-        width: 50%;
-        align-items: center;
-        justify-content: space-between;
-        div{
-        width: 40px;
-        height: 40px;
-        border-radius: 50%;
-        background-color: rgba($color: #000000, $alpha: 0.9);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-        a:visited,:active{
-            color:black;
-        }
-    }
-    
+  }
 
-    h4{
-        margin-top: 1rem;
-        line-height: 1.5;
+  h4 {
+    margin-top: 1rem;
+    line-height: 1.5;
+  }
 
-    }
-
-    .app__work-tag{
-        position: absolute;
-        padding: 0.5rem 1rem;
-        border-radius: 10px;
-        background-color: #fff;
-        top:-25px;
-        color:#000
-
-    }
+  .app__work-tag {
+    position: absolute;
+    padding: 0.5rem 1rem;
+    border-radius: 10px;
+    background-color: #fff;
+    top: -25px;
+    color: #000;
+  }
 }
 //style={{width:'80%',padding:'2rem',marginTop:"2rem",margin:'auto'}}
-.app__work-Github-Calender{
-    border-radius: 25px;    
-    background-color: #0c0e0c;
-    padding: 2rem;
-    margin:3rem auto;
-    color:#eaebea;
-    width: 80%;
+.app__work-Github-Calender {
+  border-radius: 25px;
+  background-color: #0c0e0c;
+  padding: 2rem;
+  margin: 3rem auto;
+  color: #eaebea;
+  width: 80%;
 
-    transition: all .8s ease;
-    &:hover{
+  transition: all 0.8s ease;
+  &:hover {
     box-shadow: 0 0 12px rgba(245, 244, 244, 0.8);
-        // background-image: linear-gradient(135deg,#d8323c, #eaebea,#d8323c);
-    }
+    // background-image: linear-gradient(135deg,#d8323c, #eaebea,#d8323c);
+  }
 
-    @media screen and (max-width:768px) {
-        width:100%;
-        margin:1rem auto;
-    }
+  @media screen and (max-width: 768px) {
+    width: 100%;
+    margin: 1rem auto;
+  }
 }
 
+.app__work-git-stats1 {
+  margin-top: 3rem auto;
+  display: flex;
+  justify-content: center;
+  width: fit-content;
+  transition: all 0.8s ease;
+  padding: 1rem;
+  div {
+    width: 100%;
+    margin: auto;
 
-.app__work-git-stats1{
-    margin-top: 3rem auto;
-    display: flex;
-    justify-content: center;
-    width: fit-content ;
-    transition: all .8s ease;
+    img {
+      width: 100%;
+      margin: auto;
+    }
+  }
+
+  &:hover {
+    box-shadow: 0 0 12px rgba(255, 255, 255, 0.8);
+    border-radius: 1rem;
+  }
+  @media screen and (max-width: 768px) {
+    width: 100%;
+    div {
+      width: 100%;
+    }
+  }
+}
+
+.app__work-git-stats2 {
+  display: flex;
+  width: 100%;
+  padding: 1rem;
+  margin-inline: auto;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-evenly;
+
+  div {
+    width: fit-content;
+    margin: auto 1rem;
+    margin-top: 0px;
     padding: 1rem;
-    div{
-        width: 100%;
-        margin: auto;
-
-        img{
-             width: 100%;
-             margin: auto;
-        }
-    }
-    
-    &:hover{
-        box-shadow: 0 0 12px rgba(255, 255, 255, 0.8);
-        border-radius: 1rem;
-    }
-    @media screen and (max-width:768px) {
-        width: 100%;
-        div{
-            width: 100%;
-        }
-    }
-}
-
-.app__work-git-stats2{
     display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    transition: all 0.8s ease;
+    img {
+      width: 100%;
+    }
+
+    @media screen and (max-width: 768px) {
+      width: 100%;
+      margin-top: 1rem;
+    }
+    &:hover {
+      box-shadow: 0 0 12px rgba(255, 255, 255, 0.8);
+      border-radius: 1rem;
+
+      // background-image: linear-gradient(135deg,#d8323c, #eaebea,#d8323c);
+    }
+  }
+  div:nth-child(2) {
+    width: fit-content;
+    img {
+      width: 100%;
+      margin: auto;
+    }
+    @media screen and (max-width: 768px) {
+      width: 100%;
+      margin: auto;
+    }
+  }
+  @media screen and (max-width: 768px) {
     width: 100%;
     padding: 1rem;
-    margin-inline:auto  ;
-    justify-content: center;
+    margin-top: 3rem;
+    margin: auto;
     align-items: center;
-    justify-content: space-evenly;
-    
-    div{
-        width: fit-content;
-        margin: auto 1rem;
-        margin-top: 0px;
-        padding: 1rem;
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        transition: all .8s ease;
-        img{
-            width: 100%;
-        }
-        
-        @media screen and (max-width:768px) {
-            width: 100%;
-            margin-top: 1rem;
-        }
-        &:hover{
-            box-shadow: 0 0 12px rgba(255, 255, 255, 0.8);
-        border-radius: 1rem;
-
-            // background-image: linear-gradient(135deg,#d8323c, #eaebea,#d8323c);
-        
-            }
-    }
-    div:nth-child(2){
-        width: fit-content;
-        img{
-            width: 100%;
-            margin: auto;
-        }
-        @media screen and (max-width:768px) {
-            width: 100%;
-            margin: auto;
-        }
-    }
-    @media screen and (max-width:768px) {
-        width:100%;
-        padding:1rem;
-        margin-top: 3rem;
-        margin: auto;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-    }
+    justify-content: center;
+    flex-direction: column;
+  }
 }
-.work__tag-text{
-    color:#0c0e0c;
+.work__tag-text {
+  color: #0c0e0c;
 }
-
-
